--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>files</artifactId>
+    <artifactId>Files</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
@@ -45,6 +45,4 @@
         </plugins>
 
     </build>
-
-
-        </project>
+</project>
